# Hybrid

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.bat  build.sh  hybrid  run_tests.bat  run_tests.sh
.github/workflows/: arc-guardrails.yml  arc-perf-trend.yml  ci-core.yml  ci-platform-smoke.yml  ci-warnings.yml  docs-check.yml  workflow-lint.yml
docs/: architecture.md  arrays.md  control-flow.md  examples.md  expressions.md  functions.md  language-reference.md  llvm-codegen.md  multi_jagged_arrays.md  multi_unit_compilation.md  pointers-and-memory-safety.md  references.md  structs.md  testing.md  type-system.md  unicode.md
docs/control_flow/: README.md  assert.md  break_skip.md  for.md  if_else.md  operators.md  switch.md  while.md
docs/memory/: arc_best_practices.md  heap_allocation.md
docs/type_system/: README.md  arrays.md  classes.md  expressions.md  functions.md  generics_runtime.md  integer_overflow.md  llvm_type_mapping.md  multidimensional_arrays.md  pointers.md  references.md  structs.md  type_casting.md  type_inference.md  types.md  unicode.md  variables.md
runtime/: test_runtime_stub.c
runtime/include/: hybrid_runtime.h
scripts/: arc_bench.sh  run_arc_asan.sh  run_arc_valgrind.sh
src/: CMakeLists.txt  ast.cpp  ast.h  codegen_context.h  compiler_session.cpp  compiler_session.h  concepts.h  driver.cpp  lexer.cpp  lexer.h  numeric_literal.h  parser.cpp  parser.h  runtime_support.cpp  toplevel.cpp  toplevel.h
src/analysis/: cycles.cpp  cycles.h  lifetime.cpp  lifetime.h  semantics.cpp  semantics.h  smart_pointers.cpp  smart_pointers.h
src/ast/: aggregates.cpp  ast_arc.cpp  ast_context.cpp  ast_internal.h  ast_overloads.cpp  ast_runtime.cpp  ast_types.cpp  expr_access.cpp  expr_calls.cpp  expr_literals.cpp  expr_ops.cpp  expr_ternary_switch.cpp  functions.cpp  stmts.cpp
src/memory/: ref_count.cpp  ref_count.h
src/optimizer/: arc_optimizer.cpp  arc_optimizer.h  escape_analysis.cpp  escape_analysis.h
src/parser/: parser_aggregates.cpp  parser_consteval.cpp  parser_core.cpp  parser_decls.cpp  parser_expr_binop.cpp  parser_expr_postfix.cpp  parser_expr_primary.cpp  parser_internal.h  parser_statements.cpp  parser_types.cpp
src/runtime/: arc.cpp  weak_table.cpp
test/: README.md  bool_test.txt  expr_test.txt  simple_codegen_test.txt  single_function.txt  test.hy  test_array_simple.hy  test_arrays.hy  test_bitwise_fail.hy  test_bool.txt  test_bool_simple.txt  test_boolean_ops.hy  test_brackets.txt  test_break.hy  test_char.hy  test_codegen.hy  test_comments.txt  test_compound_assignments.hy  test_direct_nested.hy  test_double_nested.hy  test_foreach.hy  test_foreach.txt  test_foreach_types.hy  test_inc_dec.hy  test_initialization.hy  test_inline_nested.hy  test_nested_debug.hy  test_null.txt  test_params.txt  test_paren_nested.hy  test_parse_debug.hy  test_postfix.hy  test_simple_member.hy  test_skip.hy  test_skip_fail.hy  test_string.hy  test_struct.hy  test_struct_complete.hy  test_struct_complex.hy  test_struct_debug.hy  (+13 more)
test/arc/: array_arc.hy  array_size.hy  basic_arc.hy  class_inheritance.hy  cycles.hy  generics_box.hy  header_layout.hy  inheritance.hy  ownership_annotations.hy  shared_ptr.hy  smart_pointer_ctor.hy  smart_pointer_describe.hy  smart_pointer_new.hy  smart_pointers.hy  smart_pointers_arc_off.hy  smart_pointers_assign.hy  smart_pointers_builtin.hy  smart_pointers_runtime.hy  smart_pointers_simple.hy  string_append_char.hy  string_concat.hy  string_cow.hy  string_size.hy  string_slice_zero_copy.hy  struct_arc.hy  unique_ptr.hy  weak_ptr.hy  weak_refs.hy
test/arrays/: array_bounds.hy  array_fill.hy  array_literal_overload.hy  array_resize.hy  arrays.hy  null_safe_index.hy  nullable_int_elements.hy  test_array_bounds.hy  test_arrays.hy  test_global_array.hy
test/basic/: assert.hy  block_comments.hy  comments.hy  initialization.hy  int_main.hy  multiline_literals.hy  test_brackets.hy  test_comments.hy  test_initialization.hy  test_use.hy  use.hy  void_main.hy
test/classes/: class_access.hy  class_basic.hy  class_const_usage.hy  class_constructor_array_new.hy  class_constructor_overload.hy  class_copy_constructor.hy  class_inheritance.hy  class_modifier_combinations.hy  class_private_usage.hy  class_public_usage.hy  class_runtime_polymorphism.hy  class_static.hy  class_static_usage.hy  class_this_to_string.hy  indexer_get_only.hy
test/control_flow/: break.hy  for_loops.hy  foreach.hy  foreach_runtime.hy  foreach_types.hy  if_else.hy  nested_loop_context.hy  nullable_flow_narrowing.hy  skip.hy  switch.hy  switch_complex.hy  ternary.hy  test_break_fail.hy  test_for_loops.hy  test_foreach_runtime.hy  test_foreach_simple.hy  test_if_else.hy  test_switch.hy  test_switch_complex.hy  top_level_for.hy  while.hy
test/delegates/: as_parameter.hy  basic.hy  defaults_params.hy  instance_method.hy  nested_in_class.hy  overload.hy
test/errors/: access_modifier_fail.hy  array_negative_index_fail.hy  array_type_fail.hy  boolean_ops_fail.hy  cast_missing_operand_fail.hy  chained_assignment_fail.hy  class_abstract_override_fail.hy  class_constructor_overload_fail.hy  class_interface_fail.hy  class_missing_constructor_fail.hy  class_write_fail.hy  context_validation_fail.hy  decimal_invalid_literal_fail.hy  decimal_literal_overflow_fail.hy  decimal_mixed_float_fail.hy  destructor_smart_pointer_manual_fail.hy  destructor_weak_manual_fail.hy  hex_literal_missing_digits_fail.hy  int_main_nonzero_fail.hy  new_keyword_reserved_fail.hy  nullable_access_fail.hy  numeric_literal_overflow_fail.hy  parser_recovery_fail.hy  pointer_arithmetic_fail.hy  string_invalid_utf8_error.hy  string_lchar_concat_fail.hy  struct_field_assignment_fail.hy  struct_missing_constructor_fail.hy  struct_self_reference_nonnullable_fail.hy  switch_fail.hy  test_array_bounds_fail.hy  test_assert_fail.hy  test_assignment_in_if_fail.hy  test_bitwise_fail.hy  test_boolean_ops_fail.hy  test_break_fail.hy  test_overflow_fail.hy  test_skip_fail.hy  test_ternary_fail.hy  test_type_errors_fail.hy  (+4 more)
test/functions/: default_parameters.hy  extern.hy  (+6 more)
(+257 files in other folders)
